// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EbookItem renders correctly 1`] = `
.c0 {
  position: relative;
  width: 20px;
  height: 20px;
  border: 2px solid black;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 {
  font-weight: bold;
}

.c4 {
  font-weight: bold;
  font-size: 18px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      class="c2"
      type="checkbox"
      value="15"
    />
  </div>
  <img
    class=""
    src="public/images/ebooks/15.png"
  />
  <div>
    <span
      class="c3"
    >
      Ebook 15
    </span>
    <span
      class=""
    >
      The ebook 15
    </span>
  </div>
  <span
    class="c4"
  >
    R$ 1500,00
  </span>
</div>
`;

exports[`EbooksList renders correctly 1`] = `
.c0 {
  position: relative;
  width: 20px;
  height: 20px;
  border: 2px solid black;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  background: black;
  width: 2px;
  height: 2px;
  left: 3px;
  top: 7px;
  box-shadow: 2px 0 0 black,4px 0 0 black,4px -2px 0 black, 4px -4px 0 black,4px -6px 0 black,4px -8px 0 black;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3 {
  font-weight: bold;
}

.c4 {
  font-weight: bold;
  font-size: 18px;
}

.c6 {
  border: none;
  height: 2px;
  background: #dedede;
}

<div>
  <ul>
    <li>
      <div>
        <div
          class="c0"
        >
          <div
            class="c1"
          />
          <input
            class="c2"
            type="checkbox"
            value="1"
          />
        </div>
        <img
          class=""
          src="public/images/ebooks/1.png"
        />
        <div>
          <span
            class="c3"
          >
            Ebook 1
          </span>
          <span
            class=""
          >
            The ebook 1
          </span>
        </div>
        <span
          class="c4"
        >
          R$ 100,00
        </span>
      </div>
    </li>
    <li>
      <div>
        <div
          class="c0"
        >
          <div
            class="c5"
          />
          <input
            checked=""
            class="c2"
            type="checkbox"
            value="2"
          />
        </div>
        <img
          class=""
          src="public/images/ebooks/2.png"
        />
        <div>
          <span
            class="c3"
          >
            Ebook 2
          </span>
          <span
            class=""
          >
            The ebook 2
          </span>
        </div>
        <span
          class="c4"
        >
          R$ 200,00
        </span>
      </div>
    </li>
    <li>
      <div>
        <div
          class="c0"
        >
          <div
            class="c1"
          />
          <input
            class="c2"
            type="checkbox"
            value="3"
          />
        </div>
        <img
          class=""
          src="public/images/ebooks/3.png"
        />
        <div>
          <span
            class="c3"
          >
            Ebook 3
          </span>
          <span
            class=""
          >
            The ebook 3
          </span>
        </div>
        <span
          class="c4"
        >
          R$ 300,00
        </span>
      </div>
    </li>
    <li>
      <div>
        <div
          class="c0"
        >
          <div
            class="c5"
          />
          <input
            checked=""
            class="c2"
            type="checkbox"
            value="4"
          />
        </div>
        <img
          class=""
          src="public/images/ebooks/4.png"
        />
        <div>
          <span
            class="c3"
          >
            Ebook 4
          </span>
          <span
            class=""
          >
            The ebook 4
          </span>
        </div>
        <span
          class="c4"
        >
          R$ 400,00
        </span>
      </div>
    </li>
  </ul>
  <hr
    class="c6"
  />
  <div>
    <span
      class="c4"
    >
      TOTAL
    </span>
    <span
      class="c4"
    >
      R$ 600,00
    </span>
  </div>
</div>
`;
